--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,8 @@
 .footer {
   background-color: rgb(226, 81, 81);
   width: auto;
+
+  box-shadow: rgb(255, 198, 0) -2px -2px 0px 2px, rgb(226, 81, 81) 0px 0px 0px 4px, rgba(0, 0, 0, 0.05) 0px 0px 2px 7px;
+ 
   
 }
