--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -12,6 +12,7 @@
 }
 .logoImg {
   width: 300px;
+  cursor: pointer;
 }
 
 .searchBar {
@@ -26,4 +27,9 @@ input {
   border: 3px solid #24b4fb;
   box-shadow:  2px 5px 10px #24b4fb;
   
+}
+select {
+  cursor: pointer;
+  box-shadow:  2px 5px 10px #24b4fb;
+
 }
